2011-05-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (fixe-real-size): Takes care of border
	size.

	* src/clfswm-layout.lisp (update-layout-managed-children): Fix a
	bug by using the parent frame instead of the current child.

	* src/clfswm-circulate-mode.lisp
	(select-brother-generic-spatial-move+right/left/up/down): New
	function to select a brother from another in a spatial move.

2011-04-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-pack.lisp (move-frame-constrained)
	(resize-frame-constrained): Use pixels instead of floating
	measure.

2011-04-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-pack.lisp (resize-frame-constrained): Takes care of
	border size.
	(implode-frame, implode-current-frame): New functions. Absorb all
	frames subchildren in frame. Explode frame opposite.

2011-04-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-pack.lisp (move-frame-constrained)
	(resize-frame-constrained): New function. Move and resize frame
	with the mouse constrained by other frame brothers.

2011-04-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (with-movement-select-next-brother)
	(with-movement-select-previous-brother)
	(with-movement-select-next-child): Use a simple method (do not
	enter in the circulate mode) to allow to circulate in all children
	or brothers.

	* src/clfswm-menu.lisp (open-menu): Save info hash table keys
	instead of deleting newly created keys.

2011-03-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (x-px->fl, y-px->fl): Takes care of
	border size.

2011-03-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-config-variable): call
	produce-conf-var-doc.

2011-03-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-conf-var-doc-html): Produce a
	documentation for all configurable variables in CLFSWM -
	HTML version.
